# eiquadprog-release

./: .mergify.yml  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  README.md  debian.store  flake.nix  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
.github/workflows/: ci-linux-ros.yml
debian/: changelog  control  gbp.conf  rules
include/eiquadprog/: eiquadprog-fast.hpp  eiquadprog-rt.hxx  eiquadprog-utils.hxx  eiquadprog.hpp
rpm/: ros-humble-eiquadprog.spec  ros-jazzy-eiquadprog.spec  ros-kilted-eiquadprog.spec  ros-rolling-eiquadprog.spec  template.spec
src/: eiquadprog-fast.cpp  eiquadprog.cpp
tests/: CMakeLists.txt  TestA.cpp  TestA.hpp
