<?xml version="1.0"?>
<package format="3">
  <name>eiquadprog</name>
  <version>1.3.1</version>
  <description>
    Eiquadprog a QP solver using active sets
  </description>
  <maintainer email="guilhem.saurel@laas.fr">Guilhem Saurel</maintainer>
  <license>LGPLv3</license>

  <url>https://github.com/stack-of-tasks/eiquadprog</url>
  <author>Gabriele Buondonno</author>
  <author>Andrea Del Prete</author>
  <author>Luca Di Gaspero</author>
  <author>Angelo Furfaro</author>
  <author>Benjamin Stephens</author>
  <author>Gael Guennebaud</author>

  <build_depend>git</build_depend>
  <build_depend>doxygen</build_depend>
  <build_depend>jrl_cmakemodules</build_depend>
  <exec_depend condition="$ROS_VERSION == 2">ament_cmake</exec_depend>
  <depend>boost</depend>
  <depend>eigen</depend>
  <depend>graphviz</depend>

  <doc_depend>doxygen</doc_depend>

  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>

</package>
